--- a/MustacheMe/Base.lproj/Main.storyboard
+++ b/MustacheMe/Base.lproj/Main.storyboard
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="HZI-R7-BJW">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
@@ -69,6 +68,7 @@
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="100" id="19Y-OQ-Ekq"/>
+                                            <constraint firstAttribute="height" constant="234" id="DJL-Py-RJj"/>
                                         </constraints>
                                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="m2c-ap-Gi1">
                                             <size key="itemSize" width="80" height="80"/>
@@ -78,10 +78,10 @@
                                         </collectionViewFlowLayout>
                                         <cells>
                                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="myCell" id="jOW-fh-JFJ" customClass="MyCollectionViewCell" customModule="MustacheMe" customModuleProvider="target">
-                                                <rect key="frame" x="10" y="0.0" width="80" height="80"/>
+                                                <rect key="frame" x="10" y="0.0" width="80" height="77"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Dxr-ek-ApH">
-                                                    <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="80" height="77"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3FV-Ku-HGb">
@@ -95,7 +95,7 @@
                                                         <constraint firstItem="3FV-Ku-HGb" firstAttribute="leading" secondItem="Dxr-ek-ApH" secondAttribute="leading" id="og8-gM-LUP"/>
                                                     </constraints>
                                                 </collectionViewCellContentView>
-                                                <size key="customSize" width="80" height="80"/>
+                                                <size key="customSize" width="80" height="77"/>
                                                 <connections>
                                                     <outlet property="myImageView" destination="3FV-Ku-HGb" id="qhZ-1L-rJF"/>
                                                 </connections>
@@ -105,6 +105,10 @@
                                     <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CharlesBarkley" translatesAutoresizingMaskIntoConstraints="NO" id="BRf-Ma-pku">
                                         <rect key="frame" x="108" y="0.0" width="237" height="216"/>
                                         <gestureRecognizers/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="324" id="4qY-ic-Ktv"/>
+                                            <constraint firstAttribute="width" constant="355.5" id="TyA-oi-dL6"/>
+                                        </constraints>
                                         <connections>
                                             <outletCollection property="gestureRecognizers" destination="Muc-pg-xa8" appends="YES" id="hKg-XD-fsV"/>
                                         </connections>
